--- a/my-project-backend/src/main/resources/application.yaml
+++ b/my-project-backend/src/main/resources/application.yaml
@@ -1,5 +1,16 @@
 spring:
+  mail:
+    host: smtp.163.com
+    username: 13656965954@163.com
+    password: UJXMXKXULCJZYBNO
+  rabbitmq:
+    addresses: localhost
+    username: admin
+    password: admin
+    virtual-host: /
   security:
+    filter:
+      order: -100
     jwt:
       key: abcdefghijk
       expire: 7 #暂时定七天，正常不能设置这么久，需要搞令牌续签
